WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
323158
[WebDriver] deleteAllCookies implementation ignores completion handler and always returns success
https://bugs.webkit.org/show_bug.cgi?id=323158
Summary
[WebDriver] deleteAllCookies implementation ignores completion handler and al...
Brent Fulgham
Reported
2026-09-01 16:48:25 PDT
WebDriver's implementation of deleteAllCookies discards its completion handler and returns success before the network process has actually deleted and saved the cookies. Since the delete process is asynchronous, we create a race condition that can lead to downstream test failures, implying bugs in WebKit that are not present in real Safari. Fixing this will avoid bugs in one cookie-based WPT from poisoning other steps.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-09-01 16:48:37 PDT
<
rdar://problem/186410147
>
Brent Fulgham
Comment 2
2026-09-01 17:27:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/73001
EWS
Comment 3
2026-09-03 10:34:00 PDT
Committed
320440@main
(99bcbf16626d): <
https://commits.webkit.org/320440@main
> Reviewed commits have been landed. Closing PR #73001 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug