[WebDriver] deleteAllCookies implementation ignores completion handler and always returns success https://bugs.webkit.org/show_bug.cgi?id=323158 rdar://186410147

Reviewed by BJ Burg.

WebDriver's implementation of deleteAllCookies discards its completion handler and returns
success before the network process has actually deleted and saved the cookies. Since the
delete process is asynchronous, we create a race condition that can lead to downstream test
failures, implying bugs in WebKit that are not present in real Safari.

Fixing this will avoid bugs in one cookie-based WPT from poisoning other steps.

This patch corrects that problem, and make the command match the behavior of the other
cookie features.

Tested with a new API test.

* Source/WebKit/UIProcess/Automation/Automation.json:
* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::deleteAllCookies):
* Source/WebKit/UIProcess/Automation/WebAutomationSession.h:
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKHTTPCookieStore.mm:
(TEST(WKHTTPCookieStore, AutomationDeleteAllCookiesWaitsForDeletion)):

Canonical link: https://commits.webkit.org/320440@main